@@ -1,5 +1,5 @@
 /*
- * $Id: hvm.c,v 1.291 2003/12/03 13:01:24 mauriliolongo Exp $
+ * $Id: hvm.c,v 1.292 2003/12/05 04:34:58 jonnymind Exp $
  */
 
 /*
@@ -398,7 +398,18 @@ void hb_vmDoInitOle( void )
 void HB_EXPORT hb_vmInit( BOOL bStartMainProc )
 {
 #if ( defined(HB_OS_WIN_32_USED) || defined(__WIN32__) )
-   PHB_DYNS pDynSymHbNoMouse = hb_dynsymFind( "HB_NOMOUSE" );
+   PHB_DYNS pDynSymHbNoMouse;
+#endif
+
+   if( s_fmInit )
+   {
+      s_fmInit = FALSE;
+      /* JC1: xinit initializes also thread, which initializes the main stack */
+      hb_xinit();
+   }
+
+#if ( defined(HB_OS_WIN_32_USED) || defined(__WIN32__) )
+   pDynSymHbNoMouse = hb_dynsymFind( "HB_NOMOUSE" );
 #endif
 
    #if defined(HB_OS_OS2)
@@ -425,7 +436,6 @@ void HB_EXPORT hb_vmInit( BOOL bStartMainProc )
    #endif
 
 #ifndef HB_THREAD_SUPPORT
-   HB_VM_STACK.pItems = NULL; /* keep this here as it is used by fm.c */
    HB_VM_STACK.Return.type = HB_IT_NIL;
    /* under threads, thread context have been already initialized */
 
